fix: Set state machine history FK constraint to integration to SET NULL

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - '**/*.php'
     branches:
-      - trunk
+      - main
   workflow_dispatch: null
   schedule:
     - cron: '0 3 * * *'
