--- a/.heycart-extension.yml
+++ b/.heycart-extension.yml
@@ -1,6 +1,6 @@
 store:
     icon: src/Resources/store/icon.png
-    default_locale: en_GB
+    default_locale: zh_CN
     variants: [99,199]
     localizations:
         - zh_CN
