--- a/.heycart-extension.yml
+++ b/.heycart-extension.yml
@@ -91,11 +91,12 @@ store:
                 zh: false
                 en: false
             priority: 0
+build:
+    zip:
+        assets:
+            enable_es_build_for_admin: true
+            enable_es_build_for_storefront: true
+            npm_strict: true
+
 changelog:
     enabled: true
-    pattern: '^NEXT-\d+'
-    variables:
-        ticket: '^(NEXT-\d+)\s'
-    template: |
-        {{range .Commits}}- [{{ .Message }}](https://issues.shopware.com/issues/{{ .Variables.ticket }})
-        {{end}}
