--- a/.heycart-extension.yml
+++ b/.heycart-extension.yml
@@ -94,9 +94,9 @@ store:
 build:
     zip:
         assets:
-            enable_es_build_for_admin: true
-            enable_es_build_for_storefront: true
-            npm_strict: true
+            enable_es_build_for_admin: false
+            enable_es_build_for_storefront: false
+            npm_strict: false
 
 changelog:
     enabled: true
